Добавлены переменные для основного шрифта

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -11,3 +11,7 @@ $black:#1d1d1d;
 $orange: #EC971F;
 $red:red;
 $transparent:transparent;
+
+//Шрифты
+$font-family:"RobotoRegular", sans-serif;
+$font-size: 16px;
