--- a/src/scss/partitions/_mixins.scss
+++ b/src/scss/partitions/_mixins.scss
@@ -1,10 +1,10 @@
 @import "variables";
 
+//Отступы
 @mixin clear{
   margin: 0;
   padding: 0;
 }
-
 @mixin clear-list{
   @include clear;
   list-style: none;
