--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -13,5 +13,5 @@ $red:red;
 $transparent:transparent;
 
 //Шрифты
-$font-family:"RobotoRegular", sans-serif;
+$font-family:"Roboto", sans-serif;
 $font-size: 16px;
