Добавлена панель навигации

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,8 +2,7 @@
 @import "partitions/mixins";
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-
-htmi, body {
+html, body {
   @include clear;
   @include font-default;
 }
