--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,13 +1,42 @@
-#header .navbar {
-  background-color: #505559; }
-  #header .navbar .home_icon {
-    color: yellow;
-    margin: 0;
-    padding: 0;
-    font-size: 24px; }
-  #header .navbar ul li {
-    display: inline-block;
-    padding: 5px 10px; }
+#header {
+  -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+          box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
+  #header .navbar {
+    background-color: #43484C; }
+    #header .navbar .wrapper_nav {
+      padding-top: 10px; }
+      #header .navbar .wrapper_nav .home_icon {
+        margin: 0;
+        padding: 0;
+        color: yellow;
+        display: block;
+        float: left;
+        width: 30px;
+        font-size: 24px;
+        text-align: center; }
+      #header .navbar .wrapper_nav ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: block;
+        float: left;
+        width: 95%; }
+        #header .navbar .wrapper_nav ul li {
+          display: inline-block;
+          padding: 5px 15px;
+          text-align: center; }
+          #header .navbar .wrapper_nav ul li a {
+            position: relative;
+            color: #fff;
+            text-transform: uppercase;
+            text-decoration: none;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+            #header .navbar .wrapper_nav ul li a:hover {
+              color: yellow; }
+            #header .navbar .wrapper_nav ul li a i {
+              position: absolute;
+              right: -15px;
+              top: 0px; }
 
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 html, body {
@@ -15,6 +44,9 @@ html, body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   font-size: 16px; }
+
+body {
+  background-color: #396B62; }
 
 a {
   text-decoration: none; }
