--- a/src/scss/partitions/_mixins.scss
+++ b/src/scss/partitions/_mixins.scss
@@ -15,3 +15,13 @@
   font-family: $font-family;
   font-size: $font-size;
 }
+
+//Тени
+@mixin shadow_block{
+  box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+}
+
+@mixin shadow_text{
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+
