--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,7 +24,36 @@
         #header .navbar .wrapper_nav ul li {
           display: inline-block;
           padding: 5px 15px;
-          text-align: center; }
+          position: relative; }
+          #header .navbar .wrapper_nav ul li:hover {
+            color: yellow; }
+            #header .navbar .wrapper_nav ul li:hover ul.dropdown {
+              opacity: 1; }
+          #header .navbar .wrapper_nav ul li span {
+            margin: 0;
+            padding: 0;
+            color: #fff;
+            text-transform: uppercase;
+            position: relative;
+            cursor: pointer; }
+            #header .navbar .wrapper_nav ul li span:hover {
+              color: yellow; }
+              #header .navbar .wrapper_nav ul li span:hover ul.dropdown {
+                opacity: 1; }
+            #header .navbar .wrapper_nav ul li span i {
+              position: absolute;
+              right: -10px; }
+          #header .navbar .wrapper_nav ul li ul.dropdown {
+            display: block;
+            position: absolute;
+            min-width: 300px;
+            top: 39px;
+            left: 0;
+            background-color: #EC971F;
+            -webkit-transition: .3s opacity;
+            -o-transition: .3s opacity;
+            transition: .3s opacity;
+            opacity: 0; }
           #header .navbar .wrapper_nav ul li a {
             position: relative;
             color: #fff;
@@ -33,10 +62,6 @@
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
             #header .navbar .wrapper_nav ul li a:hover {
               color: yellow; }
-            #header .navbar .wrapper_nav ul li a i {
-              position: absolute;
-              right: -15px;
-              top: 0px; }
 
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 html, body {
