--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -12,12 +12,13 @@
 
       .home_icon {
         @include clear;
-        color: $yellow;
+        color: $white;
         display: block;
         float: left;
         width: 30px;
         font-size: 24px;
         text-align: center;
+        margin-top: -3px;
 
       }
       ul {
