--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -74,7 +74,6 @@
           }
           ul.dropdown {
             display: block;
-            //width: 100%;
             position: absolute;
             min-width: 300px;
             top: 39px;
@@ -82,6 +81,7 @@
             background-color: $orange;
             transition: .3s opacity;
             opacity: 0;
+            @include shadow_block;
           }
 
           a {
