--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,8 @@ a {
           box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
   #header .navbar {
     background-color: #43484C; }
+    #header .navbar .active {
+      color: yellow; }
     #header .navbar .wrapper_nav {
       display: -webkit-box;
       display: -webkit-flex;
@@ -29,15 +31,29 @@ a {
               align-items: center;
       height: 50px; }
       #header .navbar .wrapper_nav .home_icon {
+        height: 40px;
+        width: 40px;
         color: #fff;
-        font-size: 22px; }
+        font-size: 24px;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center; }
         #header .navbar .wrapper_nav .home_icon a {
           color: #fff; }
-          #header .navbar .wrapper_nav .home_icon a:hover {
-            color: yellow; }
           #header .navbar .wrapper_nav .home_icon a.active {
             color: yellow; }
-      #header .navbar .wrapper_nav ul {
+        #header .navbar .wrapper_nav .home_icon:hover a {
+          color: yellow; }
+      #header .navbar .wrapper_nav > ul {
         margin: 0;
         padding: 0;
         list-style: none;
@@ -45,69 +61,85 @@ a {
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-        -webkit-flex-wrap: wrap;
-            -ms-flex-wrap: wrap;
-                flex-wrap: wrap; }
-        #header .navbar .wrapper_nav ul li {
-          margin: 0;
-          padding: 0;
-          padding: 5px 15px;
-          position: relative;
-          cursor: pointer; }
-          #header .navbar .wrapper_nav ul li:hover span {
-            color: yellow; }
-          #header .navbar .wrapper_nav ul li:hover ul.dropdown {
-            opacity: 1; }
-          #header .navbar .wrapper_nav ul li span {
-            margin: 0;
-            padding: 0;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        height: 40px;
+        width: 100%; }
+        #header .navbar .wrapper_nav > ul > li {
+          padding-right: 25px;
+          text-transform: uppercase;
+          color: #fff; }
+          #header .navbar .wrapper_nav > ul > li:first-child {
+            padding-left: 3px; }
+          #header .navbar .wrapper_nav > ul > li a {
             color: #fff;
-            text-transform: uppercase;
-            position: relative; }
-            #header .navbar .wrapper_nav ul li span.active {
+            text-decoration: none;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+            #header .navbar .wrapper_nav > ul > li a:hover, #header .navbar .wrapper_nav > ul > li a.active {
               color: yellow; }
-            #header .navbar .wrapper_nav ul li span i {
-              position: absolute;
-              right: -10px; }
-          #header .navbar .wrapper_nav ul li .dropdown {
+          #header .navbar .wrapper_nav > ul > li.active {
+            color: yellow; }
+          #header .navbar .wrapper_nav > ul > li.dropdown {
             display: -webkit-box;
             display: -webkit-flex;
             display: -ms-flexbox;
             display: flex;
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: normal;
-            -webkit-flex-direction: column;
-                -ms-flex-direction: column;
-                    flex-direction: column;
-            -webkit-flex-wrap: wrap;
-                -ms-flex-wrap: wrap;
-                    flex-wrap: wrap;
-            position: absolute;
-            min-width: 350px;
-            top: 39px;
-            left: 0;
-            background-color: #EC971F;
-            -webkit-transition: .5s all;
-            -o-transition: .5s all;
-            transition: .5s all;
-            opacity: 0;
-            -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
-                    box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
-            z-index: 100; }
-            #header .navbar .wrapper_nav ul li .dropdown li {
-              cursor: pointer;
-              -webkit-flex-basis: auto;
-                  -ms-flex-preferred-size: auto;
-                      flex-basis: auto; }
-              #header .navbar .wrapper_nav ul li .dropdown li:hover a {
+            -webkit-box-align: center;
+            -webkit-align-items: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            position: relative; }
+            #header .navbar .wrapper_nav > ul > li.dropdown span {
+              text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+              cursor: pointer; }
+              #header .navbar .wrapper_nav > ul > li.dropdown span:hover {
                 color: yellow; }
-          #header .navbar .wrapper_nav ul li a {
-            position: relative;
-            color: #fff;
-            text-transform: uppercase;
-            text-decoration: none;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
-            #header .navbar .wrapper_nav ul li a:hover {
+            #header .navbar .wrapper_nav > ul > li.dropdown i {
+              padding-left: 5px;
+              font-size: 12px; }
+            #header .navbar .wrapper_nav > ul > li.dropdown:hover i {
               color: yellow; }
-            #header .navbar .wrapper_nav ul li a.active {
-              color: yellow; }
+            #header .navbar .wrapper_nav > ul > li.dropdown:hover ul {
+              visibility: visible;
+              top: 38px;
+              opacity: .8; }
+            #header .navbar .wrapper_nav > ul > li.dropdown ul {
+              margin: 0;
+              padding: 0;
+              list-style: none;
+              -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+                      box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-orient: vertical;
+              -webkit-box-direction: normal;
+              -webkit-flex-direction: column;
+                  -ms-flex-direction: column;
+                      flex-direction: column;
+              -webkit-align-content: flex-start;
+                  -ms-flex-line-pack: start;
+                      align-content: flex-start;
+              position: absolute;
+              top: 38px;
+              left: 0;
+              min-width: 300px;
+              background-color: #43484C;
+              z-index: 10;
+              visibility: hidden;
+              -webkit-transition: all .3s;
+              -o-transition: all .3s;
+              transition: all .3s; }
+              #header .navbar .wrapper_nav > ul > li.dropdown ul > li {
+                padding: 5px 15px;
+                cursor: pointer;
+                border-bottom: 1px dotted #fff; }
+                #header .navbar .wrapper_nav > ul > li.dropdown ul > li:hover a {
+                  color: yellow; }
+                #header .navbar .wrapper_nav > ul > li.dropdown ul > li a {
+                  text-transform: none; }
+                  #header .navbar .wrapper_nav > ul > li.dropdown ul > li a.active {
+                    color: yellow; }
