--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "partitions/variables";
 @import "partitions/mixins";
+@import "partitions/media";
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 html, body {
