Изменён размер текста ссылок в главном меню

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -60,6 +60,9 @@
             color: $white;
             text-decoration: none;
             @include shadow_text;
+            @include devices-max-width-1200px{
+              font-size:14px;
+            }
 
             &:hover, &.active {
               color: $yellow;
