--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,13 +15,21 @@ a {
   a.active {
     color: yellow; }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
 #header {
   -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
   #header .navbar {
-    background-color: #43484C; }
+    background-color: #43484C;
+    margin-bottom: 0px;
+    -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+            box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
     #header .navbar .active {
       color: yellow; }
     #header .navbar .menu_icon {
@@ -37,15 +45,13 @@ a {
       -webkit-justify-content: flex-start;
           -ms-flex-pack: start;
               justify-content: flex-start;
-      padding: 10px;
-      cursor: pointer; }
+      padding-top: 5px; }
       #header .navbar .menu_icon i {
+        cursor: pointer;
         font-size: 24px;
         color: #fff;
         padding: 5px;
-        background-color: #676f75;
-        -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
-                box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
+        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
     #header .navbar .wrapper_nav {
       display: -webkit-box;
       display: -webkit-flex;
@@ -212,11 +218,89 @@ a {
                   text-transform: none; }
                   #header .navbar .wrapper_nav > ul > li.dropdown ul > li a.active {
                     color: yellow; }
+  #header .mobile_menu {
+    background-color: #4a5054;
+    width: 100%; }
+    #header .mobile_menu #mob_menu {
+      padding: 10px;
+      -webkit-border-radius: .3em;
+              border-radius: .3em; }
+      #header .mobile_menu #mob_menu .item {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        color: #fff;
+        background-color: #396B62;
+        padding-left: 15px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        padding-right: 10px;
+        width: 100%;
+        border-bottom: 1px dotted #fff;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 16px; }
+        #header .mobile_menu #mob_menu .item:hover {
+          color: yellow; }
+        #header .mobile_menu #mob_menu .item a {
+          display: block;
+          color: #fff;
+          text-decoration: none;
+          width: 100%; }
+          #header .mobile_menu #mob_menu .item a:hover {
+            color: yellow; }
+      #header .mobile_menu #mob_menu .collapse {
+        background-color: #4EC698; }
+        #header .mobile_menu #mob_menu .collapse ul {
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          -webkit-box-align: start;
+          -webkit-align-items: flex-start;
+              -ms-flex-align: start;
+                  align-items: flex-start;
+          padding: 10px; }
+          #header .mobile_menu #mob_menu .collapse ul li {
+            padding: 3px;
+            padding-left: 10px;
+            cursor: pointer;
+            width: 100%;
+            border-bottom: 1px dashed #fff; }
+            #header .mobile_menu #mob_menu .collapse ul li:hover {
+              background-color: #396B62;
+              -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+                      box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
+            #header .mobile_menu #mob_menu .collapse ul li a {
+              color: #fff;
+              display: block;
+              width: 100%;
+              text-decoration: none; }
+              #header .mobile_menu #mob_menu .collapse ul li a:hover {
+                color: yellow; }
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
-#slider .slider_wrapper {
-  -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
-          box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
-  background-color: #4EC698;
-  height: 300px; }
+#slider {
+  background-color: #4EC698; }
+  #slider .slider_wrapper {
+    height: 300px;
+    -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+            box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
