--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -7,7 +7,8 @@
 
   .navbar {
     background-color: $grey;
-    @include shadow_block
+    margin-bottom: 0px;
+    @include shadow_block;
 
     .active {
       color: $yellow;
@@ -208,10 +209,81 @@
         }
       }
     }
+  }
+  .mobile_menu{
+    background-color: lighten($grey,3%);
+    width: 100%;
 
-    nav.mobile_menu{
-      background-color: lighten($grey,15%);
-      width: 100%;
+    #mob_menu{
+      padding: 10px;
+      border-radius: .3em;
+
+      .item{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: $white;
+        background-color: $green;
+        padding-left: 15px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        padding-right: 10px;
+        width: 100%;
+        border-bottom: 1px dotted $white;
+        cursor: pointer;
+        text-transform: uppercase;
+        font-size: 16px;
+
+        &:hover{
+          color: $yellow;
+        }
+
+        a{
+          display: block;
+          color:$white;
+          text-decoration: none;
+          width: 100%;
+          &:hover{
+            color: $yellow;
+          }
+        }
+      }
+      .collapse {
+
+        background-color: $green-light;
+        ul {
+          @include clear-list;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 10px;
+
+          li{
+            padding: 3px;
+            padding-left: 10px;
+            cursor: pointer;
+            width: 100%;
+            border-bottom: 1px dashed $white;
+
+            &:hover {
+              background-color: $green;
+              @include shadow_block;
+
+            }
+
+            a{
+              color: $white;
+              display: block;
+              width: 100%;
+              text-decoration: none;
+              &:hover{
+                color: $yellow;
+              }
+
+            }
+          }
+        }
+      }
     }
   }
 }
